<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color"
    tools:context=".ModuleFragment">


    <TextView
        android:id="@+id/list_page_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="44dp"
        android:fontFamily="sans-serif-condensed-light"
        android:maxLines="2"
        android:shadowColor="#000000"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="1.6"
        android:text="@string/modul_erstellen"
        android:textColor="#FFFF00"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/list_page_title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_color"
            android:orientation="vertical">

            <!--Button to pick image-->
            <ImageView
                android:id="@+id/module_image"
                android:layout_width="362dp"
                android:layout_height="238dp"
                android:scaleType="center"
                android:src="@drawable/ic_baseline_image_24" />

            <Button
                android:id="@+id/img_pick_btn"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bild_auswaehlen" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/name"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/module_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#FFFFFF"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/beschreibung"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/module_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:minLines="5"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#FFFFFF"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/level"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/module_level"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#FFFFFF"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/save_module"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/speichern" />

        </LinearLayout>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>