<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_color"
    tools:context=".ProfileFragment">

   <de.hdodenhof.circleimageview.CircleImageView
       android:id="@+id/profile_image"
       android:layout_width="150dp"
       android:layout_height="150dp"
       android:layout_marginTop="60dp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.498"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />

   <TextView
       android:id="@+id/id"
       android:layout_width="23dp"
       android:layout_height="24dp"
       android:layout_marginStart="16dp"
       android:layout_marginTop="44dp"
       android:maxLines="2"
       android:shadowColor="#000000"
       android:shadowDx="1.5"
       android:shadowDy="1.3"
       android:shadowRadius="1.6"
       android:text="@string/id"
       android:textColor="#FFFF00"
       android:textSize="16sp"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/profile_image" />

   <TextView
       android:id="@+id/id_txt"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="4dp"
       android:textColor="@color/colorWhite"
       android:maxLines="2"
       android:shadowColor="#000000"
       android:shadowDx="1.5"
       android:shadowDy="1.3"
       android:shadowRadius="1.6"
       android:textSize="18sp"
       android:textStyle="bold"
       app:layout_constraintStart_toStartOf="@+id/id"
       app:layout_constraintTop_toBottomOf="@+id/id" />

   <TextView
       android:id="@+id/name"
       android:layout_width="45dp"
       android:layout_height="28dp"
       android:layout_marginTop="4dp"
       android:text="@string/name"
       android:maxLines="2"
       android:shadowColor="#000000"
       android:shadowDx="1.5"
       android:shadowDy="1.3"
       android:shadowRadius="1.6"
       android:textColor="#FFFF00"
       android:textSize="16sp"
       app:layout_constraintStart_toStartOf="@+id/id_txt"
       app:layout_constraintTop_toBottomOf="@+id/id_txt" />

   <TextView
       android:id="@+id/name_txt"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="4dp"
       android:textColor="@color/colorWhite"
       android:textSize="18sp"
       android:maxLines="2"
       android:shadowColor="#000000"
       android:shadowDx="1.5"
       android:shadowDy="1.3"
       android:shadowRadius="1.6"
       android:textStyle="bold"
       app:layout_constraintStart_toStartOf="@+id/name"
       app:layout_constraintTop_toBottomOf="@+id/name" />

   <TextView
       android:id="@+id/email"
       android:layout_width="53dp"
       android:layout_height="27dp"
       android:layout_marginTop="4dp"
       android:text="@string/email_address"
       android:maxLines="2"
       android:shadowColor="#000000"
       android:shadowDx="1.5"
       android:shadowDy="1.3"
       android:shadowRadius="1.6"
       android:textColor="#FFFF00"
       android:textSize="16sp"
       app:layout_constraintStart_toStartOf="@+id/name_txt"
       app:layout_constraintTop_toBottomOf="@+id/name_txt" />

   <TextView
       android:id="@+id/email_txt"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="4dp"
       android:textColor="@color/colorWhite"
       android:textSize="18sp"
       android:maxLines="2"
       android:shadowColor="#000000"
       android:shadowDx="1.5"
       android:shadowDy="1.3"
       android:shadowRadius="1.6"
       android:textStyle="bold"
       app:layout_constraintStart_toStartOf="@+id/email"
       app:layout_constraintTop_toBottomOf="@+id/email" />

   <Button
       android:id="@+id/sign_out_btn"
       android:layout_width="147dp"
       android:layout_height="54dp"
       android:layout_marginBottom="120dp"
       android:background="@drawable/signout"
       android:textAllCaps="false"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.511"
       app:layout_constraintStart_toStartOf="parent" />

   <Button
       android:id="@+id/achievements_button"
       android:layout_width="153dp"
       android:layout_height="58dp"
       android:text="Check achievements"
       app:layout_constraintBottom_toTopOf="@+id/sign_out_btn"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/email_txt" />

</androidx.constraintlayout.widget.ConstraintLayout>